--- a/FoodApp/Pages/Restaurants/List.cshtml
+++ b/FoodApp/Pages/Restaurants/List.cshtml
@@ -5,4 +5,28 @@
 
 <h1>Restaurants</h1>
 
-@Model.Message
+<form method="get">
+    <div class="form-group">
+        <div class="input-group">
+            <input type="search" class="form-control" asp-for="SearchTerm"/>
+            <span class="input-group-btn">
+                <button class="btn btn-default">
+                    <i class="fas fa-search"></i>
+                </button>
+            </span>
+        </div>
+    </div>
+</form>
+
+<table class="table">
+    @foreach(var restaurant in Model.Restaurants)
+            {
+                <tr>
+                    <td>@restaurant.Name</td>
+                    <td>@restaurant.Location</td>
+                    <td>@restaurant.Cuisine</td>
+                </tr>
+            }
+</table>
+
+<div>@Model.Message</div>
