--- a/FoodApp/Pages/Restaurants/List.cshtml
+++ b/FoodApp/Pages/Restaurants/List.cshtml
@@ -21,11 +21,23 @@
 <table class="table">
     @foreach(var restaurant in Model.Restaurants)
             {
-                <tr>
-                    <td>@restaurant.Name</td>
-                    <td>@restaurant.Location</td>
-                    <td>@restaurant.Cuisine</td>
-                </tr>
+    <tr>
+        <td>@restaurant.Name</td>
+        <td>@restaurant.Location</td>
+        <td>@restaurant.Cuisine</td>
+        <td>
+            <a class="btn btn-lg"
+               asp-page="./Detail" asp-route-restaurantId="@restaurant.Id">
+                <i class="fas fa-search-plus"></i>
+            </a>
+        </td>
+        <td>
+            <a class="btn btn-lg"
+               asp-page="./Edit" asp-route-restaurantId="@restaurant.Id">
+                <i class="fas fa-edit"></i>
+            </a>
+        </td>
+    </tr>
             }
 </table>
 
