--- a/FoodApp/Pages/Restaurants/Edit.cshtml
+++ b/FoodApp/Pages/Restaurants/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{restaurantId:int}"
+﻿@page "{restaurantId:int?}"
 @model FoodApp.Pages.Restaurants.EditModel
 @{
 }
@@ -11,11 +11,14 @@
     <div class="form-group">
         <label asp-for="Restaurant.Name"></label>
         <input asp-for="Restaurant.Name" class="form-control" />
+        <span class="text-danger" asp-validation-for="Restaurant.Name"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="Restaurant.Location"></label>
         <input asp-for="Restaurant.Location" class="form-control" />
+        <span class="text-danger" asp-validation-for="Restaurant.Location"></span>
+
     </div>
 
     <div class="form-group">
@@ -24,6 +27,7 @@
         <!-- With asp-items, data source can come from anywhere -->
         <select class="form-control" asp-for="Restaurant.Cuisine"
                 asp-items="Model.Cuisines">
+        <span class="text-danger" asp-validation-for="Restaurant.Cuisine"></span>
 
         </select>
     </div>
