Created Partial views and view components

--- a/FoodApp/Pages/Shared/_Layout.cshtml
+++ b/FoodApp/Pages/Shared/_Layout.cshtml
@@ -42,7 +42,9 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
+            <vc:restaurant-count></vc:restaurant-count>
             &copy; 2021 - FoodApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            @RenderSection("footer", required: false)
         </div>
     </footer>
 
