--- a/FoodApp/Pages/Restaurants/Edit.cshtml
+++ b/FoodApp/Pages/Restaurants/Edit.cshtml
@@ -34,3 +34,7 @@
 
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
