--- a/FoodApp/Pages/Shared/_ValidationScriptsPartial.cshtml
+++ b/FoodApp/Pages/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,8 @@
-﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+﻿<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.19.2/jquery.validate.js" 
+            asp-fallback-src="~/lib/jquery-validation/dist/jquery.validate.min.js" 
+            asp-fallback-test="window.jQuery && window.jQuery.validator"
+            crossorigin="anonymous"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"
+            asp-fallback-src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive"
+            crossorigin="anonymous"></script>
